assets/style.css
/* background-color: F4F3F2 !important; */

body {
    font-family: "Oswald", sans-serif !important;
}

#navbar, footer {
    color: #000000 !important;
    background: #94c6ff !important;
    font-family: "Oswald", sans-serif;
    font-size: 0.9em;
    font-weight: 600 !important;
    border: none !important
}

footer {
    font-size: 1.1em;
}

.CIK-button {
    border-radius: 0% !important;
    padding: 1rem 2rem !important;
}

.inherit-color {
  color: inherit !important;
}

.index-ul {
    list-style-type: '';
}

.index-ul > li {
    margin-right: 3rem;
}

.small-image {
    max-width: 30vw;
    max-height: 70vh;
    object-fit: contain;
    border: 4px #fff solid;
    border-radius: 3%;
}

.oswald-font {
    font-family: "Oswald", sans-serif !important;
}

.carousel-caption > button {
    text-transform: uppercase !important;
    font-family: "Oswald", sans-serif !important;
    font-weight: 600 !important;
    font-size: 1.2rem;
}

.carousel {
   width: 100%;
   max-height: 65vh;
 }

 .carousel-item > img {
    object-fit: cover;
    height: 65vh;
 }

 .carousel-caption {
    position: absolute;
    left: 0 !important;
    width: 100%;
    padding: 2rem !important;
    background: #0000009f;
    font-family: "Barlow";
    font-size: 1.2rem;
 }

  .carousel-caption > h5 {
    font-weight: 700 !important;
    font-size: 1.5rem;
  }

 .carousel-button-holder {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    background: #000000e7;
    border-radius: 50%;
    padding: .8rem;
 }

 .dropdown-menu {
    border: 0 !important;
    padding: 0 !important;
    border-radius: 0 !important;
    background-color: transparent !important;
    margin-left: 3rem !important;
 }

 .dropdown-menu > li > a {
    padding: 0.8rem 0.75rem ;
 }

.btn-primary {
    background: #1367c8 !important;
    border: none !important;
    color: #fff !important;
    transition: 0.4s;
}

.btn-primary:hover {
    background: #115eb7 !important;
    transition: 0.2s;
}

.card {
    background-color: #94c6ff !important;
}

.card > img {
    object-fit: cover;
    max-height: 40vh;
}

.service-background {
    background: url("../assets/images/PrellerProvidedPhotos/Coring/coring-4.jpeg") center center no-repeat;
    background: black;
    overflow: hidden;
    background: #C33764;  /* fallback colour. Make sure this is just one solid colour. */
    background: -webkit-linear-gradient(rgba(3, 8, 48, 0.892), rgba(54, 76, 95, 0.81)), url("../assets/images/PrellerProvidedPhotos/Coring/coring-4.jpeg");
    background: linear-gradient(rgba(3, 8, 48, 0.892), rgba(54, 76, 95, 0.81)), url("../assets/images/PrellerProvidedPhotos/Coring/coring-4.jpeg"); /* The least supported option. */
    background-size: cover;
}

.service-box {
    background: #94c6ff !important;
}

.service-image {
    object-fit: fill;
}

.white {
    background: #fff !important;
}

.split-vertical {
    height: 100%; /* Ensure it fills the parent row */
}

.split-vertical > .col {
    flex: 1 1 50%; /* Each child takes up 50% of the height */
    display: flex;
    align-items: center;
    justify-content: center;
}


#site-title {
    display: inline-block;
    width: auto !important;
    font-family: "Barlow", "Oswald", "Roboto", sans-serif !important;
    font-weight: 900 !important;
    font-size: 5vw;
    border-top: .2em solid #000000;
    border-bottom: .2em solid #000000;
    line-height: 1;
    padding-top: 0;
    padding-bottom: 0;
    margin: 1em 0;
}

#nav-header {
    background: #94c6ff !important;
}

#index-information {
    font-size: 1.4em;
    background: #99e7ff;
    background: linear-gradient(90deg,rgba(153, 231, 255, 1) 0%, rgba(114, 149, 247, 1) 100%);
}

#index-tabs {
    background: url("../assets/images/asphalt-road-town-sunset-rural-landscape.jpg") center center no-repeat;
    background: black;
    overflow: hidden;
    background: #C33764;  /* fallback colour. Make sure this is just one solid colour. */
    background: -webkit-linear-gradient(rgba(3, 8, 48, 0.892), rgba(54, 76, 95, 0.81)), url("../assets/images/asphalt-road-town-sunset-rural-landscape.jpg");
    background: linear-gradient(rgba(3, 8, 48, 0.892), rgba(54, 76, 95, 0.81)), url("../assets/images/asphalt-road-town-sunset-rural-landscape.jpg"); /* The least supported option. */
    background-size: cover;
}

#map {
    width: 100%;
    height: 60vh;
    border-top: #94c6ff .5rem solid;
}

/* --- Animations --- */

[data-inviewport="fade-right"] { 
  transition: 2s;
  opacity: 1;
  position: relative;
  right: 150px;
}
[data-inviewport="fade-right"].is-inViewport { 
  right: 0;
  opacity: 1;
}

[data-inviewport="fade-left"] { 
  transition: 2s;
  opacity: 0;
  position: relative;
  left: 150px;
}
[data-inviewport="fade-left"].is-inViewport { 
  left: 0;
  opacity: 1;
}

[data-inviewport="fade-up"] { 
  transition: 2s;
  opacity: 0;
  position: relative;
  top: 85px;
}
[data-inviewport="fade-up"].is-inViewport { 
  top: 0;
  opacity: 1;
}

/* Bootstrap Large Breakpoint (992px) */
@media screen and (min-width:992px) {

    #nav-header {
        background-color: #FFFFFF !important;
    }

    .active {
        display: inline-block;
        position: relative;
    }

    .dropdown-menu {
        background: #94c6ff !important;
        top: 3.35rem !important;
        box-shadow: 0 0 10px black !important;
        clip-path: inset(1px -10px -10px -10px) !important;
        opacity: 0 !important;
        visibility: hidden !important;
        display: block !important;
        transition: 0.5s;
        margin-left: 0 !important;
    }

    .dropdown-menu > li > a:hover {
        background-color: #00000000;
        transition: 0.4s;
    }

    .dropdown-menu > li > a:hover {
        background-color: #0000001f;
        transition: 0.4s;
    }

    .dropdown:hover > .dropdown-menu {
        visibility: visible !important;
        opacity: 1 !important;
        transition: 0.5s;
    }
    .dropdown > .dropdown-toggle:active {
        /*Without this, clicking will make it sticky*/
        pointer-events: none;
}

    #site-title {
        font-size: 45px;
        margin: 0.7em 0;
    }

    .nav-link {
        background-color: #00000000;
        transition: 0.4s;
    }

    .nav-link:hover {
        background-color: #0000001f;
        transition: 0.4s;
    }

    #navbar {
        box-shadow: 0px 2px 11px 0px #000000;
    }

}

/* Media query - laptops and larger (1028px) */
/* @media screen and (min-width:1028px) {

    #site-title {
        font-size: 45px;
    }
} */

